# Basic-Programming-Knowledge

./: README.md
bom/: event.md
books/: tech.md  world.md
browser/: 20210514.事件延迟问题.md
how-to-code/: 202011.系统设计.粘贴板.md  202011.系统设计学习笔记.md  20201112-vim配置.md  202101.观察者模式和订阅发布模式.md  202102.Excel循环引用检测.md  202102.ts中type和interface.md  202102.快速了解垃圾回收算法.md  202102.负载均衡.md  20210416.赛马问题.md  202205.函数式编程一二三.md  LRU算法在前端的应用.md  前端性能分析和优化方案.md
how-to-code/pics/: 系统设计原则.excalidraw
js-data-structure/: .fisher-yates.js.swp  Gcd.js  Graph.js  Lcm.js  List.js  PriorityQueue.js  Promise.js  Queue.js  ReservoirSampling.js  fisher-yates.js  lru.js
js-design/: equals.js  es6.模块化比对分析.md  find.cycle.js  find.intersection.js  html5.canvas相关API.md  html5.元素变化.md  json.parse.js  json.stringify.js  lambda.calculus.js  react.hook.js  task.async.js  ts.用ts语法模拟一些其他语言的特性.md  一种异步业务编排思路.md  各版本新特性.md
js-design/react-mini/: index.html  index.js  package.json  webpack.config.js
js-design/react-mini/instance/: dom.js  empty.js  index.js  instance.js  norm.js
js-leetcode/: .776.splitBST.js.swp  120.minimumTotal.js  121.maxProfit.js  1290.getDecimalValue.js  134.canCompleteCircuit.js  143.reorderList.js  1592.reorderSpaces.js  1700.countStudents.js  230.kthSmallest.js  241.diffWaysToCompute.js  244.WordDistance.js  33.search.js  332.findItinerary.js  334.increasingTriplet.js  37.suduku.js  409.longestPalindrome.js  45.jump.js  56.merge.js  66.constructArr.js  684.findRedundantConnection.js  703.KthLargest.js  776.splitBST.js  787.findCheapestPrice.js  845.longestMountain.js  868.binaryGap.js  969.pancakeSort.js  offer.levelOrder.js
rust-leetcode/: Cargo.toml
rust-leetcode/src/: lib.rs
rust-leetcode/src/algo/: combination_sum.rs  combination_sum2.rs  design_hash_map.rs  divide.rs  find_max_form.rs  four_sum.rs  longest_common_prefix.rs  longest_palindromic_substring.rs  next_permutation.rs  pivot_index.rs  roman_to_int.rs  rotate.rs  search_insert.rs  search_range.rs  thousand_separator.rs
rust-leetcode/src/algo/dp/: can_i_win.rs  count_numbers_with_unique_digits.rs  max_profit.rs
rust-os/: Cargo.toml  README.md
rust-os/.cargo/: config
rust-os/src/: main.rs  vga_buffer.rs
useful/: git.md  nvim.md  resources.md
